--- a/Front/frontMusic/src/components/Buttons/Button/Button.module.css
+++ b/Front/frontMusic/src/components/Buttons/Button/Button.module.css
@@ -34,6 +34,8 @@
     border: none;
     background-color: #808080;
     color: #fff;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
 }
 
 .black {
