Criando validação de conta existente

--- a/Front/frontMusic/src/pages/Account/Account.module.css
+++ b/Front/frontMusic/src/pages/Account/Account.module.css
@@ -117,6 +117,13 @@ a:-webkit-any-link {
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    gap: 1rem;
+}
+
+.form span {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #a2a2ad;
 }
 
 #forget {
