--- a/Front/frontMusic/src/components/Cards/AddArtist Card/AddArtist.module.css
+++ b/Front/frontMusic/src/components/Cards/AddArtist Card/AddArtist.module.css
@@ -10,6 +10,8 @@
     height: 200px;
     border-radius: 200px;
     cursor: pointer;
+    object-fit: cover;
+    object-position: center;
 }
 
 .remove {
