Ajustes no menu lateral

--- a/Front/frontMusic/src/common/root.css
+++ b/Front/frontMusic/src/common/root.css
@@ -2,6 +2,7 @@
     /* Colors */ 
 
     --white-one: #fff;
+    --transparent-white: #ffffff66;
     --gray-one: #a2a2ad;
     --gray-two: #92929d;
     --dark-gray-one: #45454e;
