--- a/Front/frontMusic/src/pages/HomePage/Index.module.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.module.css
@@ -41,19 +41,19 @@
 }
 
 .subscribe button {
-	background: none;
-	border: 1px solid #fff;
+	border: 1px solid var(--white-one);
 	width: 150px;
 	height: 40px;
 }
 
 .subscribe button:hover {
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: var(--transparent-white);
 }
 
 .optionsNavigations {
 	overflow-x: hidden;
 	height: calc(100vh - 360px);
+	padding: 0 2rem;
 }
 
 .optionsNavigations::-webkit-scrollbar-track {
@@ -72,15 +72,18 @@
 .optionsOne {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 7px;
+}
+
+.optionsOne h1 {
+	font-size: 18px;
 }
 
 .optionsTwo {
-	width: 100%;
 	display: flex;
 	flex-direction: column;
-	margin: 0px 80px;
-	gap: 10px;
+	gap: 7px;
+	margin-left: 2.5rem;
 }
 
 .optionsTwo span {
