--- a/Front/frontMusic/src/common/root.css
+++ b/Front/frontMusic/src/common/root.css
@@ -8,6 +8,7 @@
     --dark-gray-one: #45454e;
     --black-one: #121216;
     --black-two: #191922;
+    --pink-red-one: #EF5466;
 
     /* Fonts */
 
