--- a/Front/frontMusic/src/common/root.css
+++ b/Front/frontMusic/src/common/root.css
@@ -6,9 +6,11 @@
     --gray-one: #a2a2ad;
     --gray-two: #92929d;
     --dark-gray-one: #45454e;
+    --dark-gray-two: #52525D;
     --black-one: #121216;
     --black-two: #191922;
     --pink-red-one: #EF5466;
+    --dark-pink-one: #DB343D;
 
     /* Fonts */
 
