--- a/Front/frontMusic/src/common/reset.css
+++ b/Front/frontMusic/src/common/reset.css
@@ -29,8 +29,11 @@ body::-webkit-scrollbar-thumb {
 	border-radius: 20px;
 }
 
-h1 {
+h1, h2, h3, p, span, li, a, button {
     font-family: var(--ubuntu-font);
+}
+
+h1 {
     color: var(--white-one);
     font-weight: 700;
     margin-block-start: 0;
@@ -38,14 +41,20 @@ h1 {
 }
 
 h2 {
-    font-family: var(--ubuntu-font);
+    font-size: 20px;
     font-weight: 600;
     margin-block-start: 0;
     margin-block-end: 0;
 }
 
+h3 {
+    font-size: 16px;
+    font-weight: 400;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 p {
-    font-family: var(--ubuntu-font);
     font-weight: 400;
     color: var(--gray-one);
     margin-block-start: 0;
@@ -53,18 +62,15 @@ p {
 }
 
 span {
-    font-family: var(--ubuntu-font);
     font-weight: 300;
     color: var(--gray-two);
 }
 
 li {
-    font-family: var(--ubuntu-font);
     list-style: none;
 }
 
 a {
-    font-family: var(--ubuntu-font);
     text-decoration: none;
     color: var(--white-one);
     outline: none;
