Mudanças em cards

--- a/Front/frontMusic/src/common/root.css
+++ b/Front/frontMusic/src/common/root.css
@@ -7,8 +7,10 @@
     --gray-two: #92929d;
     --dark-gray-one: #45454e;
     --dark-gray-two: #52525D;
+    --black: #000;
     --black-one: #121216;
     --black-two: #191922;
+    --black-three: #23232d;
     --pink-red-one: #EF5466;
     --dark-pink-one: #DB343D;
 
