--- a/Front/frontMusic/src/pages/HomePage/Index.module.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.module.css
@@ -297,7 +297,7 @@ header .profile .iconsProfile {
 
 	.contentRight {
 		margin-left: 140px;
-		width: calc(100% - 140px);
+		width: 100%;
 	}
 
 	header {
