Criação de FlowCard

--- a/Front/frontMusic/src/components/Cards/Flow Card/FlowCard.module.css
+++ b/Front/frontMusic/src/components/Cards/Flow Card/FlowCard.module.css
@@ -1,3 +1,8 @@
+.item {
+    display: flex;
+    gap: 40px;
+}
+
 .imageContainer {
    display: flex;
    flex-direction: column;
@@ -26,7 +31,6 @@
     align-items: center;
     border-radius: 100%;
     opacity: 0;
-    background-image: linear-gradient(to right, rgb(145, 54, 169), rgb(216, 78, 182) 100%);
     transition: 300ms;
 }
 
