Correção css do MusicCard

--- a/Front/frontMusic/src/common/root.css
+++ b/Front/frontMusic/src/common/root.css
@@ -3,7 +3,7 @@
 
     --white-one: #fff;
     --transparent-white: #ffffff66;
-    --gray-one: #a2a2ad;
+    --gray-one: #c2c2c7;
     --gray-two: #92929d;
     --dark-gray-one: #45454e;
     --dark-gray-two: #52525D;
