--- a/Front/frontMusic/src/pages/Content/Search/navBar/All/All.module.css
+++ b/Front/frontMusic/src/pages/Content/Search/navBar/All/All.module.css
@@ -18,6 +18,7 @@
 
 .profile img {
     width: 175px;
+    height: 175px;
     border-radius: 100px;
     object-fit: cover;
     object-position: center;
