--- a/Front/frontMusic/src/components/Layout/Container/Container.module.css
+++ b/Front/frontMusic/src/components/Layout/Container/Container.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     margin-top: 65px;
     padding: 0 4rem;
@@ -8,7 +8,7 @@
     gap: 30px;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 920px) {
     .container {
         padding: 0 2rem;
     }
