Estilização de Artist.jsx + Funcionamento

--- a/Front/frontMusic/src/components/Cards/Music Card/MusicCard.module.css
+++ b/Front/frontMusic/src/components/Cards/Music Card/MusicCard.module.css
@@ -72,6 +72,11 @@
     font-weight: 400;
 }
 
+.MusicContainer span {
+    display: flex;
+    gap: 3px;
+}
+
 .MusicContainer span,
 .MusicContainer span a {
     color: var(--gray-one);
