--- a/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
@@ -1,44 +1,91 @@
-.topContent {
+.artistContent {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem 6rem;
+    gap: 3rem;
 }
 
-.topContent h1 {
+.artistContent a {
     display: flex;
     align-items: center;
-    color: #fff;
 }
 
-.topContent h1 svg {
-    margin-top: 5px;
+.artistContent a h1 {
+    font-size: 24px;
+    color: var(--white-one);
+}
+
+.artistContent a h1, 
+.artistContent a svg {
+    transition: 300ms;
+}
+
+.artistContent a:hover > h1{
+    color: var(--pink-red-one);
+}
+
+.artistContent a:hover  svg {
+    animation: arrow-left 500ms ease;
+    fill: var(--pink-red-one);
+}
+
+
+@keyframes arrow-left {
+    0% {
+        transform: translate3d(0, 0, 0);
+    } 50% {
+        transform: translate3d(10px, 0, 0);
+    } 100% {
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .content {
-    width: 75%;
+    width: 65%;
 }
 
-.content ul,
-.latestTrack {
-    background-color: #23232d;
-    list-style: none;
-    padding: 2rem ;
+.artistContent aside {
+    width: 35%;
 }
 
-.topContent aside {
-    width: 25%;
-    margin-left: 2rem;
-}
-
-.topContent aside ul {
-    list-style: none;
-}
-
-
-.latestTrack {
+.content,
+.artistContent aside {
     display: flex;
+    flex-direction: column;
     gap: 2rem;
+}
+
+.artistContent aside button:not(.albumContent button) {
+    width: 180px;
+    height: 30px !important;
+    font-size: 10px !important;    
+}
+
+.trackContent{
+    background-color: var(--black-three);
+    border-radius: 5px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.trackContent.row {
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.infoMusic {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.infoMusic span {
+    margin-bottom: 1rem;
+}
+
+.albumContent {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .cardMusic img {
